webcompat/static/css/development/components/navbar.css
/*---------- Navbar ----------*/
.wc-Navbar {
  background: var(--wc-background-dark);
  padding: 1.25em 0.5em;
  font-size:var(--base-font-size);
}
  /* section */
  .wc-Navbar-section{
    display: inline-block;
    width: 50%;
  }
    .wc-Navbar-section--left {
      float:left;
      text-align: left;
    }
   .wc-Navbar-section--right {
     float:right;
     text-align: right;
   }
   /* link */
  .wc-Navbar-link {
    display: inline-block;
    vertical-align: middle;
    color: #414042;
    font-weight:700;
    text-decoration:none;
  }
    .wc-Navbar-link:hover {
      color: #fff;
    }
    /* space between */
    .wc-Navbar-link + .wc-Navbar-link {
      margin-left:1em;
    }
    /* label */
    .wc-Navbar-link-label {
      display:inline-block;
      vertical-align:middle;
      margin-left:.3em;
    }
      @media (--viewport-450px) {
        .wc-Navbar-link-label {
          position: absolute;
          top: -9999px;
          left: -9999px;
        }
      }
    /*icon */
    .wc-Navbar-link-icon {
      font-size:1.2em;
    }

  @media (--viewport-330px) {
    .wc-Navbar-link {
      font-size: .8em;
    }
  }
  /* avatar */
  .wc-Navbar-avatar {
    height: 20px;
    display: inline-block;
    border-radius: 3px;
    vertical-align: middle;
    margin-left: .3em;
  }
  @media (--viewport-330px) {
    .wc-Navbar-avatar {
      display: none;
    }
  }

